harness/test/errors/019_no_such_key.eu
ns: {
  z: 9
  # f(x): x
}
ns.y
# x: ns.g(1)
